--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "batoulab-app",
   "private": true,
-  "version": "0.0.3-b",
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,8 @@
     "@tauri-apps/plugin-fs": "^2.4.2",
     "@tauri-apps/plugin-http": "^2.5.2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-sql": "^2.3.0",
+    "@tauri-apps/plugin-dialog": "^2.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
